--- a/web-ui/syfty_frontent/frontend/templates/frontend/index.html
+++ b/web-ui/syfty_frontent/frontend/templates/frontend/index.html
@@ -1,3 +1,7 @@
+{% extends "base_generic.html" %}
+
+{% block content %}
+
 {% if latest_search_list %}
 <ul>
     {% for search in latest_search_list %}
@@ -7,3 +11,5 @@
 {% else %}
 <p>No Searches are available.</p>
 {% endif %}
+
+{% endblock %}
