--- a/web-ui/syfty_frontent/templates/base_generic.html
+++ b/web-ui/syfty_frontent/templates/base_generic.html
@@ -18,9 +18,8 @@
             <div class="col-sm-2">
                 {% block sidebar %}
                 <ul class="sidebar-nav">
-                    <li><a href="{% url 'index' %}">Home</a></li>
-                    <li><a href="">All books</a></li>
-                    <li><a href="">All authors</a></li>
+                    <li><a href="{% url 'frontend:index' %}">Home</a></li>
+                    <li><a href="{% url 'logout' %}">Logout</a></li>
                 </ul>
                 {% endblock %}
             </div>
